		 - the old parameters, "noise_win_length" and "s_win_length", are no more
		   supported and generate an error
	- Reorganized config file and improved inline documentation within the file
	- Plotting improvements:
		- Show S/N ratio on trace plots
		- Show spectral S/N ratio on spectrum plots
	- Bug fixes:
		- Plotting: avoid overlapping traces with different location code


v0.9 - 2020-04-24
	- Support for QuakeML input and StationXML
	- Support for Python 3.5
	- Only compatible with ObsPy >= 1.1.0
	- Project reorganization:
		- Project renamed to SourceSpec
		- ssp_residuals renamed to source_residuals
		- New installable package (e.g., via pip)
	- Spectra are smoothed in log-freq (no more Konno-Ohmachi)
	- Inversion is performed in a log-freq space
	- Option to invert for t_star_0 on the plateau level
	- Traces are filtered before computing S/N ratio
	- Trace clipping detection
	- Traces are always plotted, even if no inversion is performed
	- Use by default a global model for theoretical travel time calculation
	- Possibility of using NonLinLoc travel time grids (requires nllgrid)
	- New options for P and S arrival time tolerance
	- New option for maximum epicentral distance for trace processing
	- Possibility of using a NonLinLoc model grid for obtaining vs at the
		source and at the receiver (requires nllgrid)
	- Use log10 of weighting function, since the inversion is done in
		magnitude units
	- Use json format for traceid correction file
	- Save config file to output dir (only for source_spec)
	- Save run completion time into output file
	- Logarithmic average and logarithmic (asymmetric) error bars for Mo, fc
		and source radius
	- Computation of radiated energy
	- Station-specific filters
	- New parameters: gap_max, overlap_max
	- Add legend to spectral plots
	- Add event information, code version and run completion time to plots
	- Multifigure plotting for traces and spectra (for large number of stations)